--- a/angular.json
+++ b/angular.json
@@ -34,9 +34,11 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
+              
             ]
           },
           "configurations": {
